--- a/rs-clone/src/components/Todos/styles/TodoForm.module.scss
+++ b/rs-clone/src/components/Todos/styles/TodoForm.module.scss
@@ -1,16 +1,34 @@
 .form {
-  background-color: aqua;
   max-width: 600px;
   margin: 25px auto;
-  .input {
-    width: 400px;
-    padding: 10px;
-    padding-left: 50px;
-    border-radius: 5px;
-    outline: 2px solid transparent;
-    border: 0;
-    &:focus {
-      outline: 2px solid red;
+;
+  .input_wrapper {
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid transparent;
+    cursor: pointer;
+
+    .input {
+      border: none;
+      background: none;
+      width: calc(100% - 24px);
+      height: 100%;
+      text-indent: 10px;
+      outline: 0;
+      cursor: pointer;
+    }
+
+    .input_add {
+      margin: 0 15px;
+      font-size: 1.2rem;
+      color: black;
+      cursor: pointer;
     }
   }
+
 }
