--- a/rs-clone/src/components/Todos/styles/TodoForm.module.scss
+++ b/rs-clone/src/components/Todos/styles/TodoForm.module.scss
@@ -1,11 +1,11 @@
 .form {
-  max-width: 600px;
+  max-width: 1000px;
   margin: 25px auto;
 ;
-  .input_wrapper {
+  .inputWrapper {
     width: 100%;
     height: 40px;
-    border-radius: 20px;
+    border-radius: 10px;
     background: white;
     display: flex;
     justify-content: space-between;
@@ -23,7 +23,7 @@
       cursor: pointer;
     }
 
-    .input_add {
+    .inputAdd {
       margin: 0 15px;
       font-size: 1.2rem;
       color: black;
