--- a/rs-clone/src/components/Todos/styles/Todo.module.scss
+++ b/rs-clone/src/components/Todos/styles/Todo.module.scss
@@ -16,17 +16,19 @@
   text-align: left;
 }
 
+.todoCompletedText {
+  width: 100%;
+  text-align: left;
+  color: gray;
+  text-decoration: line-through;
+}
+
 .todoCircleIcon {
   margin: 3px 20px 0 10px;
 
   &:hover {
     color: green;
   }
-}
-
-.todoCheckedCircleIcon {
-  margin: 3px 20px 0 10px;
-  color: green;
 }
 
 .todoDeleteIcon {
@@ -45,4 +47,10 @@
   &:hover {
     transform: scale(1.3);
   }
+}
+
+.todoCheckedCircleIcon {
+  margin: 3px 20px 0 10px;
+  font-size: 1.5rem;
+  color: green;
 }
