--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -5,20 +5,18 @@
 .circleStatic {
   fill: none;
   stroke: rgba($color: #ffffff, $alpha: 0.5);
-  stroke-dasharray: 1;
   stroke-width: 3;
 }
 
 .circleActive {
   fill: none;
   stroke: rgba($color: red, $alpha: 0.7);
-  stroke-dasharray: 240;
   stroke-width: 3;
   transform-origin: center;
   transform: rotate(-90deg);
 }
 
 .time {
-  font-size: 16px;
   fill: #ffffff;
+  user-select: none;
 }
