--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -1,13 +1,20 @@
 .timer {
+  width: 250px;
   position: fixed;
   bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   padding: 15px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   background-color: #1e1e1e;
   border-radius: 15px;
+  color: white;
+}
+
+.timerWithTask {
+  width: 400px;
 }
 
 .dial {
@@ -46,15 +53,20 @@
   user-select: none;
 }
 
+.task {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .buttons {
   display: flex;
   flex-shrink: 0;
   justify-content: flex-end;
-  width: 100px;
 }
 
 .timerButton {
   margin-left: 10px;
+  flex-shrink: 0;
   display: flex;
   justify-content: center;
   align-items: center;
