--- a/src/components/Todos/styles/TodoForm.module.scss
+++ b/src/components/Todos/styles/TodoForm.module.scss
@@ -1,7 +1,10 @@
-.form {
+.newTask {
   max-width: 1000px;
   margin: 25px auto;
-;
+  position: relative;
+}
+
+.form {
   .inputWrapper {
     width: 100%;
     height: 40px;
@@ -30,5 +33,11 @@
       cursor: pointer;
     }
   }
+}
 
+.pomodoroRange {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
