--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -64,7 +64,8 @@
   justify-content: flex-end;
 }
 
-.timerButton {
+.timerButton,
+.settingsButton {
   margin-left: 10px;
   flex-shrink: 0;
   display: flex;
@@ -76,4 +77,16 @@
   border: none;
   cursor: pointer;
   opacity: 0.8;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.settingsButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  margin: 0;
+  font-size: 16px;
 }
