--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -2,18 +2,21 @@
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  margin: 15px 0;
+  margin: 10px 0;
   font-size: 1.2rem;
-  border-radius: 5px;
-  border: 2px solid #555;
+  border-radius: 22px;
+  border: 1px solid #d6d6d6;
   color: #112d49;
-  background-color: #fbfef9;
+  background-color: white;
   user-select: none;
 }
 
 .todoText {
   width: 100%;
   text-align: left;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 30px;
 }
 
 .todoCompletedText {
@@ -21,6 +24,9 @@
   text-align: left;
   color: gray;
   text-decoration: line-through;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 30px;
 }
 
 .todoCircleIcon {
@@ -31,10 +37,18 @@
   }
 }
 
-.todoDeleteIcon {
-  &:hover {
-    color: red;
-  }
+.todoDeleteButton {
+  cursor: pointer;
+  display: block;
+  border: 0px;
+  padding: 7px;
+  background-color: #eee6e2;
+  border-radius: 4px;
+  transition: ease-in all 0.1s;
+}
+.todoDeleteButton:hover {
+  color: rgb(0, 0, 0);
+  background-color: rgb(185, 185, 185);
 }
 
 .todoDeleteIcon,
@@ -44,10 +58,6 @@
   font-size: 1.2rem;
   transition: 0.2s ease-in;
   cursor: pointer;
-
-  &:hover {
-    transform: scale(1.3);
-  }
 }
 
 .todoCheckedCircleIcon {
