--- a/src/components/Todos/styles/TodoCompletedList.module.scss
+++ b/src/components/Todos/styles/TodoCompletedList.module.scss
@@ -1,4 +1,12 @@
 .todoCompletedList {
   max-width: 1000px;
   margin: 0 auto;
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+  margin-top: 30px;
+}
+
+.hidden {
+  display: none;
 }
