--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -2,3 +2,14 @@
   max-width: 1000px;
   margin: 0 auto;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
