--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -55,8 +55,23 @@
   margin: 10px;
 }
 
+.loader {
+  border: 4px solid #000000; /* Light grey */
+  border-top: 4px solid rgb(254, 249, 126);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+}
+
 .errorsList {
   list-style: none;
   margin: 10px;
   color: rgb(141, 50, 50);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
