--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -34,7 +34,8 @@
 }
 
 .buttonsContainer {
-  width: 100px;
+  width: 250px;
+  display: flex;
 }
 
 .button {
@@ -45,4 +46,5 @@
   border: 0;
   border-radius: 10px;
   cursor: pointer;
+  margin: 0 10px;
 }
