--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,51 @@
-.footerContainer {
+.footerWrapper {
   background: gray;
+}
+
+.footerContainer {
+  max-width: 1240px;
   height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.teamText {
+  margin: 10px;
+  display: flex;
+  align-items: center;
+}
+.githubContainer {
+  display: flex;
+}
+
+.githubIcon {
+  fill: blue;
+}
+
+.githubLink {
+  margin: 5px;
+  cursor: pointer;
+  transition: .2s ease-in;
+  &:hover {
+    transform: scale(1.1);
+  }
+}
+
+.rsSchoolLink {
+
+}
+
+.rsSchoolLogo {
+  background: url(../../assets/rs_school_logo.svg) no-repeat;
+  background-size: 100% 100%;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  
+  transition: .2s ease-in;
+  &:hover {
+    transform: scale(1.1);
+  }
 }
