--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
 .form {
   background-color: bisque;
+  margin: 100px 0;
   border-radius: 10px;
-  margin: 30px 0;
   box-shadow: 0px 2px 4px 1px rgb(174, 156, 134);
 }
 
