--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -7,7 +7,7 @@
 
 .form {
   background-color: bisque;
-  margin: 100px 0;
+  margin: 100px 0 30px;
   border-radius: 10px;
   box-shadow: 0px 2px 4px 1px rgb(174, 156, 134);
 }
