--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,20 @@
-.header {
-  background-color: lightcoral;
+.headerWrapper {
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid rgb(113, 113, 113);
+  box-shadow: 0px 2px 3px 0px #7A7675;
+}
+
+.headerContainer {
+  max-width: 1240px;
+  margin: 0 auto;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .nav {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 600px;
   font-size: 1.6rem;
 
   & a {
@@ -16,4 +27,24 @@
       text-decoration: underline;
     }
   }
+}
+
+.userContainer {
+  font-size: 2rem;
+}
+
+.buttonsContainer {
+  width: 270px;
+  display: flex;
+}
+
+.button {
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  background-color: rgb(2, 45, 201);
+  color: white;
+  border: 0;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 0 10px;
 }
