feat: add 404 page

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -39,7 +39,7 @@
 }
 
 .rsSchoolLogo {
-  background: url(../../assets/rs_school_logo.svg) no-repeat;
+  background: url(../../../public/images/rs_school_logo.svg) no-repeat;
   background-size: 100% 100%;
   width: 70px;
   height: 60px;
