--- a/src/pages/styles/Notfound.module.scss
+++ b/src/pages/styles/Notfound.module.scss
@@ -16,7 +16,12 @@ height: 100%;
   font-size: 1.5rem;
   display: flex;
   flex-direction: column;
-  h2 {
-    margin: 30px 0;
-  }
+}
+
+.title {
+  margin: 30px 0;
+}
+
+.text {
+  font-weight: normal;
 }
