--- a/src/components/Todos/styles/TodoList.module.scss
+++ b/src/components/Todos/styles/TodoList.module.scss
@@ -3,3 +3,17 @@
   min-height: 500px;
   margin: 0 auto;
 }
+
+.loader {
+  border: 4px solid #000000; /* Light grey */
+  border-top: 4px solid rgb(254, 249, 126);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 0.5s linear infinite;
+  margin: 0 auto;
+}
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
