--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -10,10 +10,10 @@
   margin: 100px 0 30px;
   border-radius: 10px;
   box-shadow: 0px 2px 4px 1px rgb(174, 156, 134);
+  text-align: center;
 }
 
-
-.input{
+.input {
   border-radius: 10px;
   height: 30px;
   margin: 10px auto;
@@ -31,13 +31,13 @@
   border-radius: 5px;
   border: none;
   padding: 10px;
-  background-color:rgb(200, 196, 99);
+  background-color: rgb(200, 196, 99);
   box-shadow: 0px 2px 4px 0px rgb(140, 138, 69);
   cursor: pointer;
   transition: 0.2s ease-in;
 
   &:hover {
-    background-color:rgb(254, 249, 126);
+    background-color: rgb(254, 249, 126);
   }
 }
 
@@ -70,6 +70,10 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
