--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -1,30 +1,33 @@
-.todo {
-  display: flex;
-  align-items: center;
-  padding: 10px 20px;
+.todoWrapper {
   margin: 15px 0;
   font-size: 1.2rem;
-  border-radius: 5px;
-  border: 2px solid #555;
-  color: #112d49;
+  border-radius: 15px;
+  border: 1px solid #555;
+  color: #555;
   background-color: #fbfef9;
   user-select: none;
+  overflow: hidden;
+}
+
+.todo {
+  padding: 10px 15px;
+  display: flex;
+  align-items: center;
 }
 
 .todoText {
-  width: 100%;
+  flex-grow: 1;
   text-align: left;
 }
 
 .todoCompletedText {
-  width: 100%;
+  flex-grow: 1;
   text-align: left;
   color: gray;
-  text-decoration: line-through;
 }
 
 .todoCircleIcon {
-  margin: 3px 20px 0 10px;
+  margin-right: 10px;
 
   &:hover {
     color: green;
@@ -44,20 +47,16 @@
   font-size: 1.2rem;
   transition: 0.2s ease-in;
   cursor: pointer;
-
-  &:hover {
-    transform: scale(1.3);
-  }
 }
 
 .todoCheckedCircleIcon {
-  margin: 3px 20px 0 10px;
+  margin-right: 10px;
   font-size: 1.5rem;
   color: green;
 }
 
 .todoAddToTimerBtn {
-  margin-right: 5px;
+  margin-right: 15px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -66,4 +65,24 @@
   color: red;
   border-radius: 50%;
   line-height: 1;
+}
+
+.editBtn {
+  margin-left: 15px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid gray;
+  line-height: 1;
+  font-size: 1.25rem;
+  padding: 0.25rem 0;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  color: #555;
+  background: none;
+  transition: 0.3s;
+
+  &:hover {
+    background: #efefef;
+  }
 }
