--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,9 +1,10 @@
-#root {
-  text-align: center;
-
-}
-
 .container {
   max-width: 1000px;
   margin: 0 auto;
+}
+
+body {
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  background-color: #fbf7f4;
 }
