--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -4,9 +4,10 @@
 }
 
 body {
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   background-color: #fbf7f4;
+}
 
 .visually-hidden {
   position: absolute;
