--- a/src/pages/styles/Notfound.module.scss
+++ b/src/pages/styles/Notfound.module.scss
@@ -1,11 +1,11 @@
 .notFoundCountaier {
-width: 100%;
-height: 100%;
+display: flex;
+justify-content: center;
 }
 
 .figure {
-  display: inline-block;
-  margin-top: 50px;
+  text-align: center;
+  margin-top: 70px
 }
 
 .img {
