feat: add delete Todo

--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -74,6 +74,9 @@
   align-items: center;
 }
 
+.wrapperSvg {
+  width: 70px;
+}
 .loader {
   border: 4px solid #000000;
   border-top: 5px solid rgb(119, 128, 192);
