--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -74,18 +74,22 @@
   align-items: center;
 }
 
-.wrapperSvg {
-  width: 70px;
-}
-.loader {
-  border: 4px solid #000000;
+
+.loader,
+.loaderDelete {
+  border: 5px solid #000000;
   border-top: 5px solid rgb(119, 128, 192);
   border-radius: 50%;
   width: 20px;
   height: 20px;
   animation: spin 0.5s linear infinite;
+
+}
+
+.loader {
   margin: 3px 18px 0 11px;
 }
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
