feat: add create panel task

--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -86,3 +86,17 @@
     background: #efefef;
   }
 }
+
+.noteContainer {
+  padding: 0 15px 15px 30px;
+}
+
+.noteText {
+  padding: 10px 15px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  background-color: #fbf7f4;
+  box-shadow: rgb(0 0 0 / 10%) 0px 1px 0px;
+  white-space: pre-wrap;
+  word-break: break-word;
+}
