--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -1,4 +1,4 @@
-.body {
+.content {
   padding: 30px 30px 15px;
 }
 
@@ -96,6 +96,7 @@
 }
 
 .cancelButton {
+  margin-left: auto;
   margin-right: 10px;
   &:hover {
     opacity: 0.7;
@@ -129,4 +130,10 @@
     box-shadow: none;
     transform: translateY(2px);
   }
+}
+
+.note {
+  width: 50%;
+  font-size: 1rem;
+  overflow: hidden;
 }
