--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -130,3 +130,22 @@
     transform: translateY(2px);
   }
 }
+
+.loader,
+.loaderDelete {
+  border: 5px solid #000000;
+  border-top: 5px solid rgb(119, 128, 192);
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 0.5s linear infinite;
+}
+
+.loader {
+  margin: 3px 18px 0 11px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
