--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -147,12 +147,27 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .note {
   width: 50%;
   font-size: 1rem;
   overflow: hidden;
+}
+
+.formattedDate {
+  margin: 0 10px;
+  font-size: 1rem;
+}
+
+.expiredDate {
+  margin: 0 10px;
+  font-size: 1rem;
+  color: red;
 }
