--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -73,7 +73,6 @@
   align-items: center;
 }
 
-
 .editBtn {
   margin-left: 15px;
   display: inline-flex;
@@ -109,8 +108,12 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .noteContainer {
@@ -127,3 +130,17 @@
   word-break: break-word;
 }
 
+.stats {
+  font-size: 0.9rem;
+}
+
+.date {
+  margin: 0 10px;
+  font-size: 0.9rem;
+}
+
+.expiredDate {
+  margin: 0 10px;
+  font-size: 0.9rem;
+  color: red;
+}
