--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -48,3 +48,23 @@
   cursor: pointer;
   margin: 0 10px;
 }
+
+.english,
+.russian {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid gray;
+  background-size: 100% 100%;
+  cursor: pointer;
+}
+
+.english {
+  background: url(../../../public/images/UK_flag.svg) no-repeat;
+  background-size: 100% 100%;
+}
+
+.russian {
+  background: url(../../../public/images/russian_flag.svg) no-repeat;
+  background-size: 100% 100%;
+} 
