--- a/src/components/Todos/styles/TodoList.module.scss
+++ b/src/components/Todos/styles/TodoList.module.scss
@@ -5,6 +5,10 @@
   list-style: none;
 }
 
+.todoWrapper {
+  border-radius: 15px;
+}
+
 .loader {
   border: 4px solid #000000; /* Light grey */
   border-top: 4px solid rgb(254, 249, 126);
