--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,12 +1,15 @@
+@import './colorVars';
 .container {
   max-width: 1000px;
   margin: 0 auto;
 }
 
 body {
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
-  background-color: #fbf7f4;
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
+    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  background-color: var(--background-main-color);
+  color: var(--main-text-color);
+  transition: background-color 0.3s linear, color 0.3s linear;
 }
 
 .visually-hidden {
