--- a/src/components/Forms/Forms.module.scss
+++ b/src/components/Forms/Forms.module.scss
@@ -1,8 +1,10 @@
+@import '../../styles/base/colorVars';
+
 .formWrapper {
   display: flex;
   flex-direction: column;
   min-width: 350px;
-  background-color: white;
+  background-color: var(--module-background-color);
 }
 
 h2 {
@@ -10,14 +12,14 @@ h2 {
 }
 
 .form {
-  background-color: white;
+  background-color: var(--module-background-color);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  border: 1px solid #dfdbd8;
+  border: 1px solid var(--border-color);
 }
 
 .input {
@@ -25,7 +27,7 @@ h2 {
   height: 30px;
   margin: 10px 10px;
   padding: 15px;
-  border: 1px solid #dfdbd8;
+  border: 1px solid var(--border-color);
   width: 100%;
 }
 
@@ -35,13 +37,13 @@ h2 {
   border-radius: 5px;
   border: none;
   padding: 10px;
-  background-color: #d22d2d;
-  color: white;
+  background-color: var(--button-color);
+  color: var(--button-text-color);
   cursor: pointer;
   transition: 0.2s ease-out;
 
   &:hover {
-    background-color: #f75353d0;
+    background-color: var(--button-hover-color);
   }
 }
 
@@ -51,8 +53,12 @@ h2 {
   background-color: transparent;
   font-size: 15px;
   text-decoration: underline;
-  color: #ff0000;
+  color: var(--link-color);
   cursor: pointer;
+}
+
+.linkButton:hover {
+  color: var(--link-hover-color);
 }
 
 .success {
@@ -64,8 +70,8 @@ h2 {
 }
 
 .loader {
-  border: 4px solid #000000; /* Light grey */
-  border-top: 4px solid rgb(254, 249, 126);
+  border: 4px solid var(--loader-bg-color);
+  border-top: 4px solid var(--loader-color);
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -76,7 +82,7 @@ h2 {
 .errorsList {
   list-style: none;
   margin: 10px;
-  color: rgb(141, 50, 50);
+  color: var(--error-color);
 }
 
 @keyframes spin {
