--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/base/colorVars';
+
 .modal {
   position: fixed;
   top: 0;
@@ -14,7 +16,7 @@
 .modalContent {
   position: relative;
   padding: 15px;
-  background: white;
+  background: var(--module-background-color);
   border-radius: 15px;
   min-width: 250px;
 }
