--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/base/colorVars';
+
 .timer {
   width: 250px;
   position: fixed;
@@ -8,9 +10,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #1e1e1e;
+  background-color: var(--module-background-color);
   border-radius: 15px;
-  color: white;
 }
 
 .timerWithTask {
@@ -49,7 +50,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 26px;
-  color: #ffffff;
   user-select: none;
 }
 
@@ -64,6 +64,10 @@
   justify-content: flex-end;
 }
 
+.timer svg {
+  fill: var(--timer-icons-color);
+}
+
 .timerButton,
 .settingsButton {
   margin-left: 10px;
@@ -72,7 +76,6 @@
   justify-content: center;
   align-items: center;
   font-size: 40px;
-  color: #ffffff;
   background: none;
   border: none;
   cursor: pointer;
