--- a/src/components/ui/NumberInput/numberInput.module.scss
+++ b/src/components/ui/NumberInput/numberInput.module.scss
@@ -1,9 +1,11 @@
+@import './../../../styles/base/colorVars';
+
 .numberInput {
   width: 100%;
   padding: 0.625rem;
-  color: #555;
+  color: var(--main-text-color);
   font-size: 1rem;
-  background-color: #efefef;
+  background-color: var(--input-bg-color);
   border: 1px solid transparent;
   border-radius: 5px;
   box-shadow: none;
