feat: add animation to EditPanel

--- a/src/components/Todos/styles/TodoList.module.scss
+++ b/src/components/Todos/styles/TodoList.module.scss
@@ -1,8 +1,8 @@
 .todoList {
   max-width: 1000px;
-  min-height: 500px;
   margin: 0 auto;
   list-style: none;
+  margin-bottom: 100px;
 }
 
 .todoWrapper {
