--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,5 +1,7 @@
+@import '../../styles/base/colorVars';
+
 .footerWrapper {
-  border-top: 1px solid #d7d7d7;
+  border-top: 1px solid var(--header-border-color);
   height: 70px;
 }
 
