--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -21,11 +21,11 @@
 .inputText {
   width: 100%;
   padding: 0.625rem;
-  color: #555;
+  color: var(--main-text-color);
   font-size: 1.2rem;
   font-weight: bold;
   background-color: var(--input-bg-color);
-  border: 1px solid transparent;
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   box-shadow: none;
   outline: none;
