--- a/src/styles/base/_colorVars.scss
+++ b/src/styles/base/_colorVars.scss
@@ -23,14 +23,17 @@ html {
 
   --header-border-color: rgb(213 213 213);
   --header-bg-color: white;
+
   --footer-github-icon-color: #7e0000;
+
+  --hover-box-shadow: 0px 8px 17px 4px rgb(145 145 145 / 20%);
 }
 
 html[data-theme='dark'] {
   --main-text-color: #c4c4c4;
 
-  --link-color: #ff0000;
-  --link-hover-color: #ff0000a6;
+  --link-color: #ff2929;
+  --link-hover-color: #ff2929a6;
   --button-color: #d22d2d;
   --button-hover-color: #ff0000c5;
   --button-text-color: #ffffff;
@@ -53,4 +56,6 @@ html[data-theme='dark'] {
   --header-bg-color: #1a1c26;
 
   --footer-github-icon-color: white;
+
+  --hover-box-shadow: 0px 11px 16px 4px rgb(0 0 0 / 23%);
 }
