--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -5,11 +5,19 @@
 }
 
 body {
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
   background-color: var(--background-main-color);
   color: var(--main-text-color);
   transition: background-color 0.3s linear, color 0.3s linear;
+}
+
+a {
+  color: var(--link-color);
+}
+
+a:hover {
+  color: var(--link-hover-color);
 }
 
 .visually-hidden {
