--- a/src/components/Todos/styles/AddTodo.module.scss
+++ b/src/components/Todos/styles/AddTodo.module.scss
@@ -7,6 +7,8 @@
   color: #555;
   background-color: #fbfef9;
   user-select: none;
+  transition: height 0.5s ease;
+  overflow: hidden;
 }
 
 .addButton {
