--- a/src/components/Todos/styles/TodoList.module.scss
+++ b/src/components/Todos/styles/TodoList.module.scss
@@ -1,7 +1,23 @@
+@import './../../../styles/base/colorVars';
+@import '../../../styles/base/global';
+
 .todoList {
   max-width: 1000px;
-  min-height: 500px;
   margin: 0 auto;
+  background-color: var(--module-background-color);
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  list-style: none;
+  margin-bottom: 100px;
+}
+
+.hidden {
+  display: none;
+}
+
+.todoWrapper {
+  border-radius: 15px;
 }
 
 .loader {
@@ -14,6 +30,10 @@
   margin: 0 auto;
 }
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
