--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,16 +1,15 @@
 .headerWrapper {
   width: 100%;
-  background-color: white;
-  border-bottom: 1px solid rgb(113, 113, 113);
-  box-shadow: 0px 2px 3px 0px #7A7675;
+  background-color: var(--header-bg-color);
+  border-bottom: 1px solid var(--header-border-color);
 }
 
 .headerContainer {
-  max-width: 1240px;
+  max-width: 981px;
   margin: 0 auto;
   height: 70px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 .nav {
@@ -19,7 +18,7 @@
 
   & a {
     text-decoration: none;
-    color: darkblue;
+    color: var(--button-color);
     padding: 10px;
     cursor: pointer;
 
@@ -34,17 +33,20 @@
 }
 
 .buttonsContainer {
-  width: 270px;
   display: flex;
+  gap: 20px;
 }
 
 .button {
-  padding: 10px 20px;
-  font-size: 1.2rem;
-  background-color: rgb(2, 45, 201);
-  color: white;
+  padding: 5px 10px;
+  background-color: var(--button-color);
+  color: var(--button-text-color);
   border: 0;
-  border-radius: 10px;
+  border-radius: 4px;
   cursor: pointer;
   margin: 0 10px;
+}
+
+.button:hover {
+  background-color: var(--button-hover-color);
 }
