feat: add dropdown for todos

--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -7,6 +7,8 @@
   border: 1px solid var(--border-color);
   background-color: var(--module-background-color);
   user-select: none;
+  transition: height 0.5s;
+  overflow: hidden;
 }
 
 .todo {
