--- a/src/components/Todos/styles/TodoList.module.scss
+++ b/src/components/Todos/styles/TodoList.module.scss
@@ -20,6 +20,9 @@
   border-radius: 15px;
 }
 
+.todoWrapperFiltered {
+  filter: blur(5px);
+}
 .loader {
   border: 4px solid #000000; /* Light grey */
   border-top: 4px solid rgb(254, 249, 126);
