feat: add logo in header. add animation to regform

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,6 +12,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.logo {
+  width: 50px;
+}
+
 .nav {
   max-width: 600px;
   font-size: 1.6rem;
