--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -12,6 +12,12 @@
   margin-bottom: 15px;
 }
 
+.flexRow {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 90px;
+}
+
 .numbers {
   display: flex;
   align-items: flex-end;
@@ -164,7 +170,7 @@
 }
 
 .note {
-  width: 36%;
+  width: 50%;
   font-size: 1rem;
   overflow: hidden;
 }
