--- a/src/components/Todos/styles/Todo.module.scss
+++ b/src/components/Todos/styles/Todo.module.scss
@@ -86,13 +86,24 @@
   justify-content: center;
   align-items: center;
   border: none;
-  background: rgba($color: red, $alpha: 0.2);
-  color: red;
+  background: rgba($color: #555, $alpha: 0.2);
+  background: none;
+  color: #555;
   border-radius: 50%;
   line-height: 1;
-  font-size: 1.2rem;
+  font-size: 1rem;
   transition: 0.3s ease-in;
+  overflow: hidden;
   cursor: pointer;
+
+  &:hover {
+    color: red;
+  }
+}
+
+.taskInTimerIcon {
+  color: red;
+  // background: rgba($color: red, $alpha: 0.2);
 }
 
 .wrapperBtn {
