refactor: main layout

--- a/src/components/Todos/styles/TodoWidget.module.scss
+++ b/src/components/Todos/styles/TodoWidget.module.scss
@@ -1,3 +1,15 @@
 .statsTimerWrap {
   display: flex;
 }
+
+.statsWrap {
+  display: flex;
+  max-width: 1000px;
+  justify-content: center;
+  margin: 0 auto;
+  gap: 30px;
+}
+
+.widgetWrap {
+  display: block;
+}
