--- a/src/components/StatsWidget/statsWidget.module.scss
+++ b/src/components/StatsWidget/statsWidget.module.scss
@@ -8,6 +8,9 @@
   border-radius: 5px;
   color: var(--main-text-color);
   margin-top: 30px;
+  flex: 70%;
+  gap: 10px;
+  align-items: baseline;
 }
 
 .item {
