--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -1,17 +1,16 @@
 @import '../../styles/base/colorVars';
 
 .timer {
-  width: 250px;
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
   padding: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--module-background-color);
-  border-radius: 15px;
+  border-radius: 5px;
+  position: relative;
+  flex: 30%;
+  margin-top: 30px;
+  margin-bottom: 25px;
 }
 
 .timerWithTask {
