--- a/src/pages/styles/TaskPage.module.scss
+++ b/src/pages/styles/TaskPage.module.scss
@@ -4,4 +4,6 @@
   grid-template-columns: 1fr 1000px 1fr;
   grid-template-rows: 1fr;
   gap: 0px 0px;
+  background-repeat: no-repeat;
+  background-position: right 30px bottom 30px;
 }
