--- a/src/pages/styles/WelcomePage.module.scss
+++ b/src/pages/styles/WelcomePage.module.scss
@@ -4,7 +4,7 @@
   gap: 100px;
   background-repeat: no-repeat;
   background-position: right 10px bottom 30px;
-  height: 70vh;
+  height: 100%;
 }
 
 .leftContainer {
