feat: add mobile styles

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -12,6 +12,10 @@
   align-items: center;
   margin: 0 auto;
   background-color: transparent;
+
+  @media (max-width: 425px) {
+    flex-direction: column;
+  }
 }
 
 .teamText {
