--- a/src/components/SideBar/SideBar.module.scss
+++ b/src/components/SideBar/SideBar.module.scss
@@ -8,6 +8,10 @@
   margin-right: 30px;
   border-radius: 5px;
   padding: 10px 0;
+
+  @media (max-width: 768px) {
+    justify-self: center;
+  }
 }
 
 .navBar a {
@@ -17,6 +21,7 @@
   text-decoration: none;
   border-radius: 3px;
   font-size: 20px;
+  white-space: nowrap;
 }
 
 .navBar a:hover {
