--- a/src/components/StatsWidget/statsWidget.module.scss
+++ b/src/components/StatsWidget/statsWidget.module.scss
@@ -1,13 +1,11 @@
 .container {
-  margin-bottom: 25px;
+  flex-grow: 1;
   display: flex;
   padding: 15px;
   text-align: center;
   background: var(--module-background-color);
   border-radius: 5px;
   color: var(--main-text-color);
-  margin-top: 30px;
-  flex: 70%;
   gap: 10px;
   align-items: baseline;
 }
