--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -1,20 +1,15 @@
 @import '../../styles/base/colorVars';
 
-.timer {
+.container {
+  width: 360px;
   padding: 15px;
+  flex-shrink: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--module-background-color);
   border-radius: 5px;
   position: relative;
-  flex: 30%;
-  margin-top: 30px;
-  margin-bottom: 25px;
-}
-
-.timerWithTask {
-  width: 400px;
 }
 
 .dial {
@@ -22,24 +17,24 @@
   display: flex;
   flex-shrink: 0;
   width: 100px;
-  margin-right: 15px;
 }
 
 .circleStatic {
+  color: rgba($color: var(--timer-icons-color), $alpha: 0.5);
   fill: none;
-  stroke: rgba($color: #ffffff, $alpha: 0.5);
+  stroke: currentColor;
   stroke-width: 4;
 }
 
 .circleActive {
   fill: none;
-  stroke: rgba($color: red, $alpha: 0.7);
+  stroke: red;
   stroke-width: 4;
   transform-origin: center;
   transform: rotate(-90deg);
 
   &Break {
-    stroke: rgba($color: #397097, $alpha: 0.9);
+    stroke: #397097;
   }
 }
 
@@ -52,24 +47,11 @@
   user-select: none;
 }
 
-.task {
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  line-height: 1;
-  font-size: 1rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .controls {
   display: flex;
   flex-shrink: 0;
   justify-content: flex-end;
-}
-
-.timer svg {
-  fill: var(--timer-icons-color);
+  column-gap: 10px;
 }
 
 .timerButton,
@@ -79,7 +61,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #ffffff;
+  color: var(--timer-icons-color);
   background: none;
   border: none;
   cursor: pointer;
@@ -91,15 +73,14 @@
 }
 
 .timerButton {
-  margin-left: 10px;
-  font-size: 36px;
+  font-size: 2rem;
 }
 
 .settingsButton {
   position: absolute;
   top: 10px;
   right: 10px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .removeTaskButton {
@@ -108,5 +89,44 @@
 
   :hover {
     color: red;
+  }
+}
+
+.infoPanel {
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0 1rem;
+  overflow: hidden;
+}
+
+.instructionsPanel {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.focusInstruction {
+  color: var(--accent-text-color);
+  font-weight: 600;
+}
+
+.breakInstruction {
+  color: #397097;
+  font-weight: 600;
+}
+
+.task {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+
+  & span {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
