--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -128,8 +128,8 @@
 
 .numberBtn {
   margin: 0 3px;
-  width: 40px;
-  height: 40px;
+  width: 2.2rem;
+  height: 2.2rem;
   font-size: 1rem;
   display: flex;
   justify-content: center;
