--- a/src/components/Todos/styles/TodoWidget.module.scss
+++ b/src/components/Todos/styles/TodoWidget.module.scss
@@ -3,10 +3,10 @@
 }
 
 .statsWrap {
+  margin: 30px 0 25px;
   display: flex;
-  max-width: 1000px;
+  flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto;
   gap: 30px;
 }
 
