fix: welcome page content under header

--- a/src/pages/styles/WelcomePage.module.scss
+++ b/src/pages/styles/WelcomePage.module.scss
@@ -4,7 +4,7 @@
   gap: 100px;
   background-repeat: no-repeat;
   background-position: right 10px bottom 30px;
-  height: calc(100vh - 141px);
+  flex-grow: 1;
 }
 
 .leftContainer {
