--- a/src/components/Todos/styles/EditPanel.module.scss
+++ b/src/components/Todos/styles/EditPanel.module.scss
@@ -1,10 +1,13 @@
-
 .container {
   border-radius: 15px;
 }
 
 .content {
   padding: 30px 30px 15px;
+
+  @media (max-width: 768px) {
+    padding: 1rem 1rem 0.5rem;
+  }
 }
 
 .item {
@@ -172,6 +175,10 @@
   width: 50%;
   font-size: 1rem;
   overflow: hidden;
+
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .formattedDate {
