--- a/src/components/ui/DatePicker/DatePicker.module.scss
+++ b/src/components/ui/DatePicker/DatePicker.module.scss
@@ -32,6 +32,12 @@
   border-radius: 10px;
   z-index: 11;
   overflow: hidden;
+
+  @media (max-width: 500px) {
+    margin-left: 0;
+    left: -150px;
+    top: 30px;
+  }
 }
 
 .selectedDate {
